# rust-web-app-preview

./: .env  .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
bins/gen_key/: Cargo.toml
bins/gen_key/src/: main.rs
crates/libs/base/: Cargo.toml
crates/libs/base/src/: env.rs  error.rs  lib.rs
crates/libs/base/src/token/: error.rs  mod.rs
crates/libs/base/src/utils/: mod.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: config.rs  lib.rs
crates/libs/core/src/_dev_utils/: dev_db.rs  mod.rs
crates/libs/core/src/crypt/: mod.rs  pwd.rs  token.rs
crates/libs/core/src/model/: base.rs  error.rs  mod.rs  task.rs  user.rs
crates/libs/core/src/pwd/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/model/: Cargo.toml
crates/libs/model/src/: base.rs  error.rs  lib.rs  user.rs
crates/libs/model/src/_dev_utils/: dev_db.rs
crates/libs/model/src/store/: mod.rs
crates/libs/utils/: Cargo.toml
crates/libs/utils/src/: b64.rs  lib.rs
crates/libs/utils/src/token/: mod.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: error.rs  main.rs
crates/services/web-server/src/crypt/: mod.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs  routes_login.rs  web_token.rs
crates/services/web-server/src/web/rpc/: mod.rs  task_rpc.rs
crates/tools/gen_key/: Cargo.toml
crates/tools/gen_key/src/: main.rs
examples/: gen_key.rs  quick_dev.rs
libs/ctx/: Cargo.toml
libs/model/src/: task.rs  user.rs
libs/model/src/_dev_utils/: mod.rs
libs/utils/: Cargo.toml
services/web-server/: Cargo.toml
services/web-server/examples/: quick_dev.rs
services/web-server/src/: main.rs
services/web-server/src/_dev_utils/: mod.rs
services/web-server/src/crypt/: token.rs
services/web-server/src/log/: mod.rs
services/web-server/src/model/: base.rs  error.rs
services/web-server/src/model/store/: mod.rs
services/web-server/src/web/: error.rs  mw_req_stamp.rs  mw_res_map.rs  routes_login.rs
services/web-server/src/web/rpc/: mod.rs
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
sql/initial/: 01-create-schema.sql
src/: conf.rs  config.rs  error.rs  log.rs  main.rs  test_utils.rs  utils.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/crypt/: error.rs  mod.rs  pwd.rs  token.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: base.rs  error.rs  mod.rs  task.rs  ticket.rs  user.rs
src/model/store/: db.rs  init_dev_db.rs  mod.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  mod.rs  mw_auth.rs  mw_req_stamp.rs  mw_res_map.rs  mw_res_mapper.rs  routes_login.rs  routes_static.rs
src/web/rpc/: mod.rs  rpc_task.rs  rpc_ticket.rs  task_rpc.rs
tools/gen_key/: Cargo.toml
