[package]
name = "rust-web-app-preview"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AwesomeApp Rust Web App Preview."

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
sqlb = "0.3" # Optional
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64="0.21"
# -- Others
lazy-regex = "3"
uuid = {version = "1", features = ["v4", "fast-rng"]}
time = "0.3"
async-trait = "0.1"
strum_macros = "0.25"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"
