[workspace]
members = [
    # -- Tools
    "crates/tools/gen_key",

    # -- Application Libraries
    "crates/libs/base",
    "crates/libs/model",

    # -- Application Services
    "crates/services/web-server"
]
# default-members to allow simple `cargo run`
default-members = ["crates/services/web-server"]
