[workspace]
members = [
    # -- Tools
    "crates/tools/gen_key",

    # -- Application Libraries
    "crates/libs/base", # e.g., config, time, encoding, utilities.
    "crates/libs/core", # e.g., model/store, events (token/pwd).

    # -- Application Services
    "crates/services/web-server"
]

# default-members to allow simple `cargo run` (but then needs to specify for test)
# default-members = ["crates/services/web-server"]
