[package]
name = "lib_utils"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "AwesomeApp Rust Web App Preview."

[dependencies]
base64="0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
# -- Others
uuid = {version = "1", features = ["v4", "fast-rng"]}
time = "0.3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
serial_test = "2"

