[package]
name = "lib_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Encoding
base64="0.21"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
# -- Others
lazy-regex = "3"
time = "0.3"


[dev-dependencies]
anyhow = "1"